# Advent-of-Code-2024

./: .gitignore  README.md  template.cpp
day 1/: CMakeLists.txt
day 1/include/: parser.hh  solver.hh
day 1/src/: parser.cpp  solver.cpp
day 10/: CMakeLists.txt  day10.cpp
day 10/include/: grid.hh  parser.hh  solver.hh
day 10/src/: parser.cpp  solver.cpp
day 11/: CMakeLists.txt  day11.cpp
day 11/include/: parser.hh  rock.hh  solver.hh
day 11/src/: parser.cpp  rock.cpp  solver.cpp
day 12/: CMakeLists.txt  day12.cpp
day 12/include/: grid.hh  parser.hh  region.hh  solver.hh  types.hh
day 12/src/: coordinate.cpp  parser.cpp  region.cpp  solver.cpp
day 13/: CMakeLists.txt  day13.cpp
day 13/include/: claw.hh  parser.hh  solver.hh  types.hh
day 13/src/: claw.cpp  parser.cpp  solver.cpp
day 14/: CMakeLists.txt  day14.cpp
day 14/include/: parser.hh  robot.hh  solver.hh  types.hh
day 14/src/: parser.cpp  robot.cpp  solver.cpp  (+1 more)
day 2/: CMakeLists.txt  day2.cpp
day 3/: CMakeLists.txt  day3.cpp
day 4/: CMakeLists.txt  day4.cpp
day 5/: CMakeLists.txt  day5.cpp
day 6/: CMakeLists.txt  day6.cpp
day 6/include/: coordinate.hh  guard.hh  parser.hh  scene.hh  solver.hh  types.hh
day 6/src/: coordinate.cpp  guard.cpp  parser.cpp  scene.cpp  solver.cpp
day 7/: CMakeLists.txt  day7.cpp
day 8/: CMakeLists.txt  day8.cpp
day 8/include/: antenna.hh  coordinate.hh  grid.hh  parser.hh  solver.hh  types.hh
day 8/src/: antenna.cpp  coordinate.cpp  grid.cpp  parser.cpp  solver.cpp
day 9/: CMakeLists.txt  day9.cpp
template/: CMakeLists.txt  day.cpp
(+43 files in other folders)
